--- a/src/app/_component/setting-layout/lookup-setting/lookup/lookup.component.html
+++ b/src/app/_component/setting-layout/lookup-setting/lookup/lookup.component.html
@@ -67,7 +67,7 @@
                         <button type="button" class="form-control input-sm"
                             style="width: auto;float: right;margin-left: 5px;
                             background: #337ab7;color: white;"
-                            id="download" routerLink="/profile/lookupBatch">
+                            id="download" routerLink="/profile/lookup/lookupBatch">
                             <span class="glyphicon glyphicon-cog"></span>
                             Batch Action</button>
                         <button type="button" class="form-control input-sm"
@@ -130,8 +130,8 @@
                                     </button>
                                     <button type="button" class="btn btn-default"
                                         (click)="editSubLookupData(lookupData)">
-                                        <span class="glyphicon glyphicon-plus"
-                                            style="color:green"></span>
+                                        <span class="glyphicon glyphicon-hand-right"
+                                            style="color:#a94442"></span>
                                     </button>
                                 </div>
                             </td>
