fake ui data added

--- a/src/app/_component/setting-layout/lookup-setting/lookup/lookup.component.html
+++ b/src/app/_component/setting-layout/lookup-setting/lookup/lookup.component.html
@@ -66,8 +66,8 @@
                     <div class="col-lg-4" style="margin-top: 5px;">
                         <button type="button" class="form-control input-sm"
                             style="width: auto;float: right;margin-left: 5px;
-                            background: #337ab7;color: white;"
-                            id="download" routerLink="/profile/lookup/lookupBatch">
+                            background: #4750b6;color: white;"
+                            id="download" routerLink="/profile/lookupBatch">
                             <span class="glyphicon glyphicon-cog"></span>
                             Batch Action</button>
                         <button type="button" class="form-control input-sm"
@@ -92,7 +92,7 @@
                             </label>
                             <input type="text" id="searchSourceJobDetails" 
                                 class="form-control input-sm"
-                                style="width: 35%;"
+                                style="width: 30%;"
                                 [(ngModel)]="searchLookup"
                                 placeholder="Search by any key" />
                         </div>
