--- a/src/app/_component/setting-layout/lookup-setting/sub-lookup/sub-lookup.component.html
+++ b/src/app/_component/setting-layout/lookup-setting/sub-lookup/sub-lookup.component.html
@@ -67,7 +67,7 @@
                     <div class="col-lg-6" style="text-align: end;">
                         <button type="button" class="form-control input-sm"
                             style="width: auto;float: right;margin-left: 5px;
-                            background: #337ab7;color: white;"
+                            background: #4750b6;color: white;"
                             id="download" (click)="subLookupBatch()">
                             <span class="glyphicon glyphicon-cog"></span>
                             Batch Action</button>
@@ -120,7 +120,7 @@
                             </label>
                             <input type="text" id="searchSourceJobDetails" 
                                 class="form-control input-sm"
-                                style="width: 35%;" [(ngModel)]="searchLookup"
+                                style="width: 30%;" [(ngModel)]="searchLookup"
                                 placeholder="Search by any key" />
                         </div>
                     </div>
