--- a/src/app/_component/setting-layout/task-type-setting/task-type-setting.component.html
+++ b/src/app/_component/setting-layout/task-type-setting/task-type-setting.component.html
@@ -62,7 +62,8 @@
     <div class="col-lg-12">
         <div class="card mb-3">
             <div class="card-body">
-                <task-header></task-header>
+                <task-header [selectedMenu]="selectedMenu">
+                </task-header>
                 <div class="row">
                     <!-- sid -->
                     <div class="col-xs-3 col-sm-2 sidebar-offcanvas" id="sidebar" style="padding-right: inherit;">
