--- a/src/app/_content/app.less
+++ b/src/app/_content/app.less
@@ -633,7 +633,7 @@ td {
 
 .Yg_no {
   border: none;
-    border-radius: 50%;
+  border-radius: 50%;
   background-color: red;
   height: 12px;
   width: 12px;
@@ -641,8 +641,32 @@ td {
 
 .Yg_yes {
   border: none;
-    border-radius: 50%;
+  border-radius: 50%;
   background-color: green;
+  height: 12px;
+  width: 12px;
+}
+
+.Yg_active {
+  border: none;
+  border-radius: 50%;
+  background-color: green;
+  height: 12px;
+  width: 12px;
+}
+
+.Yg_delete {
+  border: none;
+  border-radius: 50%;
+  background-color: red;
+  height: 12px;
+  width: 12px;
+}
+
+.Yg_inactive {
+  border: none;
+  border-radius: 50%;
+  background-color: orange;
   height: 12px;
   width: 12px;
 }
