--- a/src/app/_component/auth/login/login.component.html
+++ b/src/app/_component/auth/login/login.component.html
@@ -24,10 +24,10 @@
             </div>
         </div>
         <div class="form-group">
+            <button class="btn btn-sm btn-primary" (click)="register()">Register</button>&nbsp;
             <button type="submit" [disabled]="loading" 
-                class="btn btn-sm btn-danger">Login</button>&nbsp;
-            <button class="btn btn-sm btn-primary" (click)="register()"
-                style="float:right">Register</button>
+                style="float:right" class="btn btn-sm btn-danger">
+                Login</button>
         </div>
     </form>
     <div style="border-radius: 0 0 calc(0.25rem - 1px) calc(0.25rem - 1px);
