basic ui bread crime change
basic ui bread crime change

--- a/src/app/_component/setting-layout/setting-layout.component.html
+++ b/src/app/_component/setting-layout/setting-layout.component.html
@@ -3,7 +3,7 @@
     <li *ngFor="let breadcrumb of (breadcrumbs | async)">
         <a [routerLink]="breadcrumb.url">{{ breadcrumb.label }}</a>
     </li>
-    <a (click)="back()" style="float: right;">Back</a>
+    <!-- <a (click)="back()" style="float: right;">Back</a> -->
 </ol>
 <div class="container-fluid">
     <div class="row" style="margin-top: 25px;">
