--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,7 +51,7 @@
               Lookup Data</a>
           </li>
           <li>
-            <a routerLink="/profile/sourcetask"
+            <a routerLink="/profile/sourcetask/sstList"
               *ngIf="hasAccess(['ROLE_ADMIN', 'ROLE_MASTER_ADMIN'])">
               SourceTask</a>
           </li>
