code refactor for breadcrums
code refactor for breadcrums

--- a/src/app/_component/lookup-setting/lookup/lookup.component.html
+++ b/src/app/_component/lookup-setting/lookup/lookup.component.html
@@ -67,7 +67,7 @@
                         <button type="button" class="form-control input-sm"
                             style="width: auto;float: right;margin-left: 5px;
                             background: #4750b6;color: white;"
-                            id="download" routerLink="/profile/lookupBatch">
+                            id="download" routerLink="/lookup/lookupbatch">
                             <span class="glyphicon glyphicon-cog"></span>
                             Batch Action</button>
                         <button type="button" class="form-control input-sm"
