--- a/src/app/_component/batch-action/batch-action.component.html
+++ b/src/app/_component/batch-action/batch-action.component.html
@@ -97,7 +97,7 @@
                     <thead>
                         <tr>
                             <th style="width: 1px;">No#</th>
-                            <th>Error</th>
+                            <th>Message</th>
                         </tr>
                     </thead>
                     <tbody>
